# attention-clustering

./: .gitignore  EXPERIMENT_LOG.md  config.py  pyproject.toml  requirements.txt  run_experiment.py  train.py
analysis/: __init__.py  attention.py  probes.py
data/: __init__.py  synthetic.py  wikipedia.py
model/: __init__.py  components.py  transformer.py
results/: all_results.json
results/gqa_shuffled_rope/: config.json  experiment_result.json  train_log.json
results/gqa_topic_ordered_rope/: config.json  experiment_result.json  train_log.json
results/mha_shuffled_rope/: config.json  experiment_result.json  train_log.json
results/mha_topic_ordered_rope/: config.json  experiment_result.json  train_log.json
